# Read_bitmaps

./: CMakeLists.txt  ProjectConfig.h  ProjectConfig.h.in  README.md
DATA/: Add_1000.txt
Include/: Fully_connected_network.hpp  Read_BMP.hpp  Windows.hpp  pbPlots.hpp  supportLib.hpp
Src/: Fully_connected_network.cpp  Read_BMP.cpp  Windows.cpp  main.cpp  pbPlots.cpp  supportLib.cpp
include/: Read_BMP.hpp
src/: Read_BMP.cpp  main.cpp
